--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <!-- link a css -->
     <link rel="stylesheet" href="./css/main.css">
     <title>Orgánico Estudio Creativo</title>
+    <meta name="description" content="Orgánico Estudio Creativo: un estudio multidisciplinario especializado en diseño, branding, producción audiovisual y desarrollo web. Creamos soluciones personalizadas que conectan a nuestros clientes con sus audiencias de manera auténtica y orgánica.">
+    <meta name="keywords" content="diseño creativo, soluciones de diseño, branding, producción audiovisual, desarrollo web, diseño multidisciplinario, estudio creativo, identidad visual, estrategia digital">
     <!-- advent pro -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
