--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -8,6 +8,8 @@
     <!-- link a css -->
     <link rel="stylesheet" href="../css/main.css">
     <title>Orgánico Estudio Creativo | Contacto</title>
+    <meta name="description" content="Contáctanos en Orgánico Estudio Creativo para hablar sobre proyectos de diseño, branding, producción audiovisual o desarrollo web. ¡Estamos listos para ayudarte a crecer con soluciones creativas!">
+    <meta name="keywords" content="contacto estudio creativo, soluciones de diseño, proyectos audiovisuales, branding, desarrollo web, estudio multidisciplinario, comunicación creativa">
     <!-- advent pro -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
