--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -8,6 +8,8 @@
     <!-- link a css -->
     <link rel="stylesheet" href="../css/main.css">
     <title>Orgánico Estudio Creativo | Nosotros</title>
+    <meta name="description" content="Conoce a Ale y Andrés López Iriarte, fundadores de Orgánico Estudio Creativo, expertos en branding, diseño editorial, producción audiovisual y desarrollo de proyectos visuales. Más de 10 años creando soluciones creativas.">
+    <meta name="keywords" content="equipo creativo, Ale López Iriarte, Andrés López Iriarte, expertos en branding, diseño editorial, producción audiovisual, soluciones creativas, experiencia en diseño, gestión de proyectos">
     <!-- advent pro -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -60,15 +62,15 @@
     <section class="nosotros">
         <h1>Nosotros</h1>
         <div>
-            <img class="nosotros-img" src="../img/nosotros-ale.webp" alt="alejandra lopez iriarte">
-            <h3>Ale López Iriarte</h3>
-            <h5>Directora de Branding & Editorial</h5>
+            <img class="nosotros-img" src="../img/nosotros-ale.webp" alt="fotografia alejandra lopez iriarte">
+            <h2>Ale López Iriarte</h2>
+            <h3>Directora de Branding & Editorial</h3>
             <p>Diseñadora de la Comunicación Gráfica con especialidad en Diseño Editorial, graduada de la UAM Xochimilco en 2014. Tiene más de 10 años de experiencia colaborado con diversas empresas en proyectos de diseño identidad corporativa, diseño UX/UI, diseño de contenido para redes sociales, etiquetado de producto y gestión de impresión.</p>
         </div>
         <div>
-            <img class="nosotros-img" src="../img/nosotros-andres.webp" alt="andres lopez iriarte">
-            <h3>Andrés López Iriarte</h3>
-            <h5>Director de Proyectos Audiovisuales</h5>
+            <img class="nosotros-img" src="../img/nosotros-andres.webp" alt="fotografia andres lopez iriarte">
+            <h2>Andrés López Iriarte</h2>
+            <h3>Director de Proyectos Audiovisuales</h3>
             <p>Diseñador Gráfico egresado del CECC, esexperto en desarrollo y gestión de proyectos audiovisuales con más de 8 años de experiencia en la producción y post-producción de video. Su enfoque está en crear contenido visual innovador, optimizando cada etapa del proceso para entregar productos de alta calidad que conecten con la audiencia.</p>
         </div>
     </section>
