--- a/pages/portafolio.html
+++ b/pages/portafolio.html
@@ -8,6 +8,8 @@
     <!-- link a css -->
     <link rel="stylesheet" href="../css/main.css">
     <title>Orgánico Estudio Creativo | Portafolio</title>
+    <meta name="description" content="Descubre el portafolio de Orgánico Estudio Creativo, donde mostramos proyectos de branding, diseño gráfico, audiovisual y desarrollo web. Cada proyecto refleja nuestro compromiso con soluciones de diseño únicas.">
+    <meta name="keywords" content="portafolio de diseño, proyectos de branding, diseño gráfico, producción audiovisual, desarrollo web, diseño multidisciplinario, estudio creativo, soluciones de diseño">
     <!-- advent pro -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
