--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -8,6 +8,8 @@
     <!-- link a css -->
     <link rel="stylesheet" href="../css/main.css">
     <title>Orgánico Estudio Creativo | Servicios</title>
+    <meta name="description" content="Servicios de diseño y producción audiovisual de Orgánico Estudio Creativo. Especializados en branding, diseño editorial, producción de video, desarrollo web y más. Soluciones creativas para empresas de todos los tamaños.">
+    <meta name="keywords" content="branding, diseño editorial, producción audiovisual, desarrollo web, diseño gráfico, identidad visual, diseño UX/UI, motion graphics, diseño de empaque, contenido digital, gestión de impresión">
     <!-- advent pro -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -63,7 +65,7 @@
             <p>Somos un estudio multidisciplinario que genera <strong>soluciones de diseño</strong> de forma orgánica, buscando siempre crear un <strong>vínculo</strong> entre nuestros clientes y sus audiencias con resultados que nos hagan <strong>crecer juntos.</strong></p>
         </div>        
         <div class="servicios-txt">
-            <h5>Branding</h5>
+            <h2>Branding</h2>
             <p>Identidad visual y logotipo</p>
             <p>Aplicaciones de marca</p>
             <p>Diseño de empaque</p>
@@ -71,7 +73,7 @@
             <p>Parrillas y contenido para RRSS</p>
         </div>    
         <div class="servicios-txt">    
-            <h5>Editorial e ilustración</h5>
+            <h2>Editorial e ilustración</h2>
             <p>Diseño de libros y revistas</p>
             <p>Carteles y folletería</p>
             <p>Infografías, íconos y patrones</p>
@@ -79,13 +81,13 @@
             <p>Gestión de impresión</p>
         </div>
         <div class="servicios-txt">
-            <h5>Audiovisual</h5>
+            <h2>Audiovisual</h2>
             <p>Producción de video</p>
             <p>Postproducción de video</p>
             <p>Motion graphics</p>
         </div>        
         <div class="servicios-txt">
-            <h5>Web & app</h5>
+            <h2>Web & app</h2>
             <p>Diseño de interfaz (UI)</p>
             <p>Experiencia de usuario (UX)</p>
             <p>Desarrollo front y back end</p>
